<resources>
    <color name="black">#000000</color>
    <color name="grey">#555555</color>
    <color name="white">#FFFFFF</color>
    <color name="red">#FF0000</color>
    <color name="green">#009900</color>
    <color name="light_blue">#3399FF</color>

    <string name="app_name">Mmm - Ice Cream</string>

    <string name="welcome_message">Welcome!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="tvStep1">STEP 1 (flavor)</string>
    <string name="tvStep2">STEP 2 (style)</string>
    <string name="tvStep3">STEP 3 (pay)</string>
    <string name="btnCheckout">Checkout</string>
    <string name="isConnected">is connected?</string>
    <string name="btnDarkChocMint">Dark Chocolate Peppermint</string>
    <string name="btnMatchaGreenTea">Matcha Green Tea</string>
    <string name="btnPumpkinPie">Pumpkin Pie</string>
    <string name="btnStrawberryBasil">Strawberry Basil</string>
    <string name="btnWaffleCone">Waffle Cone </string>
    <string name="btnBowl">Bowl</string>
    <string name="hello_world">hello world!</string>
    <string name="tvNumber">CARD NUMBER</string>
    <string name="tvOrder">YOUR ORDER</string>
    <string name="tvOrderDetail">enter details</string>
    <string name="tvTotal">TOTAL</string>
    <string name="tvTotalDetail">$ 4.50</string>
    <string name="etFirstNameHint">FIRST NAME</string>
    <string name="etLastNameHint">LAST NAME</string>
    <string name="etNumberHint">**** **** **** ****</string>
    <string name="tvFirstName">FIRST NAME</string>
    <string name="tvLastName">LAST NAME</string>
    <string name="tvMonth">MONTH</string>
    <string name="tvYear">YEAR</string>
    <string name="tvCVV2">CVV2</string>
    <string name="etMonthHint">MM</string>
    <string name="etYearHint">YY</string>
    <string name="etCVV2Hint">****</string>
    <string name="ivPayNow">Pay Now</string>
    <string name="ivPoweredByStripe">Powered by Stripe</string>
    <string name="title_activity_splash">splash</string>
    <string name="title_activity_main">main</string>
    <string name="tvOrderDetailType">Style:\\nFlavor</string>
    <string name="tvTotalCurrency">$</string>
    <string name="trxApproved">succeeded</string>
    <string name="styleBowl">BOWL</string>
    <string name="tvExit">Exit App</string>
    <string name="tvSaveReceipt">Save Receipt</string>
    <string name="trxDeclined">declined</string>
    <string name="tvApprovedResult">Thank you.  We have received your order and your ice-cream will be waiting for you at the end of the counter.  Enjoy :)</string>
    <string name="tvGoneWrongResult">Oh no!  Something\'s gone wrong.  We haven\'t charged you, but we think our Ice-Cream machine might be broken.  Have you got cash ??</string>
    <string name="tvDeclinedResult">Oh dear!  It looks like you didn\'t pay your bill on time… !!</string>
    <string name="tvServerPort">Port:</string>
    <string name="tvServerIP">Server IP:</string>
</resources>
