<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/netConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:background="@color/red"
            android:text="@string/isConnected"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:paddingEnd="10dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <ImageView
                android:id="@+id/ivOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvOrder"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvOrder"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvOrderDetailType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Style:\nFlavor: "
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvOrderDetail"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvOrderDetail"
                        android:textColor="@color/white" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvTotal"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvTotalCurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvTotalCurrency"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:paddingRight="2dp"/>

                    <TextView
                        android:id="@+id/tvTotalDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/credit_card" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvNumber"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_blue"
                    android:ems="12"
                    android:hint="@string/etNumberHint"
                    android:digits="01234 56789"
                    android:inputType="number"
                    android:maxLength="19"
                    android:nextFocusDown="@+id/etMonth"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvMonth"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tvMonth"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/etMonth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/light_blue"
                            android:ems="3"
                            android:hint="@string/etMonthHint"
                            android:digits="0123456789"
                            android:inputType="number"
                            android:maxLength="2"
                            android:nextFocusDown="@+id/etYear"
                            android:paddingEnd="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grey"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvYear"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tvYear"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/etYear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/light_blue"
                            android:ems="3"
                            android:hint="@string/etYearHint"
                            android:digits="0123456789"
                            android:inputType="number"
                            android:maxLength="2"
                            android:nextFocusDown="@+id/etCVV2"
                            android:paddingEnd="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grey"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvCVV2"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tvCVV2"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/etCVV2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/light_blue"
                            android:ems="4"
                            android:hint="@string/etCVV2Hint"
                            android:digits="0123456789"
                            android:inputType="number"
                            android:maxLength="4"
                            android:paddingEnd="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grey"
                            android:textSize="20sp" />


                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <ImageButton
            android:id="@+id/btnPayNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/ivPayNow"
            android:paddingTop="20dp"
            android:src="@drawable/selector_pay_now"
            android:onClick="selectPayNow"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:contentDescription="@string/ivPoweredByStripe"
            android:paddingTop="10dp"
            android:src="@drawable/powered_by_stripe" />

    </LinearLayout>

</ScrollView>